update unstyled Condo page; prepare for demo build

--- a/index.html
+++ b/index.html
@@ -2,10 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Condo | A tiny Sass grid library</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Condo - a tiny Sass grid library</title>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700|Catamaran:100,400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="dist/css/application.css">
 </head>
 <body>
-  <h1>Condo</h1>
-  <p>Because you don't always need a mansion-sized Sass grid library.</p>
+  <header class="header">
+    <div class="container">
+      <h1 class="header-heading">Condo</h1>
+      <h3>Because you don't always need a mansion-sized Sass grid library.</h3>
+    </div>
+  </header>
+
+  <div class="container">
+    <p class="coming_soon">
+      Demo coming soon.
+    </p>
+  </div>
+
+  <footer class="footer">
+    <div class="container">
+      &copy;2016 Kyle Shevlin. Follow me <a href="http://twitter.com/kyleshevlin">@kyleshevlin</a>.
+    </div>
+  </footer>
+  <script src="dist/js/application.js"></script>
 </body>
 </html>
