update copy, add condo bower package, update docs

--- a/index.html
+++ b/index.html
@@ -16,9 +16,21 @@
   </header>
 
   <div class="container">
-    <p class="coming_soon">
-      Demo coming soon.
+    <p>
+      I'm a big fan of <a href="http://susy.oddbird.net/">Susy</a>. It's an incredibly robust grid framework. I've used it in dozens of projects and even wrote a <a href="https://packagecontrol.io/packages/Susy%202%20Snippets">snippets package for Sublime Text</a> for it. However, in most of my Susy projects, I only need about 10% of what the library has to offer. To that end, I wrote Condo to specifically focus on my most common use cases. I have a feeling they might be your most common use cases, too.
     </p>
+
+    <p>
+      Like Susy, Condo is a Sass grid library designed to apply grid settings via the presentation layer of your website, i.e. in the CSS, and not in the semantic layer, i.e. your HTML. This is accomplished through a collection of mixins and functions.
+    </p>
+
+    <p>
+      You can read the full documentation <a href="/docs">here</a>.
+    </p>
+
+    <div class="coming_soon">
+      Full Demo Coming Soon
+    </div>
   </div>
 
   <footer class="footer">
