--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </p>
 
     <p>
-      You can read the full documentation <a href="/docs">here</a>.
+      You can read the full documentation <a href="docs">here</a>.
     </p>
 
     <div class="coming_soon">
